Bug 350525 - Kontact app description on console is not translatable
Summary: Kontact app description on console is not translatable
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-22 21:39 UTC by Alexander Potashev
Modified: 2015-07-23 05:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2015-07-22 21:39:23 UTC
When running "kontact --help", the message "KDE personal information manager" is not translatable.

I think this is connected to the warning "QCoreApplication::arguments: Please instantiate the QApplication object first": KI18n doesn't know what translation catalog (.mo file) to load until the application name in QApplication is set to "kontact".

Reproducible: Always
Comment 1 Laurent Montel 2015-07-23 05:48:20 UTC
Git commit 89b2f029212833dce2f9dde2a6833cff55259809 by Montel Laurent.
Committed on 23/07/2015 at 05:48.
Pushed by mlaurent into branch 'master'.

Fix Bug 350525 - Kontact app description on console is not translatable

M  +1    -1    CMakeLists.txt
M  +15   -13   src/pimuniqueapplication.cpp
M  +2    -1    src/pimuniqueapplication.h

http://commits.kde.org/kontactinterface/89b2f029212833dce2f9dde2a6833cff55259809
Comment 2 Laurent Montel 2015-07-23 05:49:18 UTC
Git commit 39b8c06e7ea97f4b0998c234c0dac4e010ea6ee7 by Montel Laurent.
Committed on 23/07/2015 at 05:48.
Pushed by mlaurent into branch 'master'.

Fix Bug 350525 - Kontact app description on console is not translatable

M  +1    -1    CMakeLists.txt
M  +4    -3    akregator/src/main.cpp
M  +4    -3    kaddressbook/main.cpp
M  +4    -3    kmail/main.cpp
M  +2    -2    knotes/apps/application.cpp
M  +1    -1    knotes/apps/application.h
M  +2    -2    knotes/apps/main.cpp
M  +5    -5    kontact/src/main.cpp
M  +2    -2    korganizer/koapp.cpp
M  +1    -1    korganizer/koapp.h
M  +3    -1    korganizer/main.cpp

http://commits.kde.org/kdepim/39b8c06e7ea97f4b0998c234c0dac4e010ea6ee7