Fix Bug 350525 - Kontact app description on console is not translatable

BUG: 350525