koapp.cpp
@@ -38,8 +38,8 @@
 #include <KStartupInfo>
 #include <QCommandLineParser>
 
-KOrganizerApp::KOrganizerApp(int &argc, char **argv[], KAboutData &about)
-    : KontactInterface::PimUniqueApplication(argc, argv, about)
+KOrganizerApp::KOrganizerApp(int &argc, char **argv[])
+    : KontactInterface::PimUniqueApplication(argc, argv)
 {
     QString prodId = QStringLiteral("-//K Desktop Environment//NONSGML KOrganizer %1//EN");
     KCalCore::CalFormat::setApplication(QStringLiteral("KOrganizer"), prodId.arg(QStringLiteral(KDEPIM_VERSION)));
